# kijitabu

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.cpp
.github/workflows/: build.yaml
conf/: kijitabu.desktop
src/: CodeEditor.cpp  CodeEditor.h  EditorWindow.cpp  EditorWindow.h  LineNumberArea.cpp  LineNumberArea.h  Makefile  kijitabu.pro  main.cpp  moc_CodeEditor.cpp  moc_EditorWindow.cpp
